# MCP_Playground

./: .gitignore  explanation-mcp.md  pyproject.toml
data_analysis_lg/: .env  .env.example
learn-MCP/ch02/: client.py  server.py
learn-MCP/ch03/: server.py  server_solution.py
learn-MCP/ch04/: server.py
learn-MCP/ch05/: client.py  server.py
learn-MCP/ch06/: client1.md  client2.md  client_v1.py  client_v2.py  data.py  schema.py  server.py  streams_explained.md  test_client.md
learn-MCP/ch06/tools/: __init__.py  customer.py  orders.py
learn-MCP/lg_mcp_01/: .env.example  client.py  data.py  documentation_part1.md  documentation_part2.md  graph.py  main.py  schema.py  server.py  test_interactive.py
learn-MCP/lg_mcp_01/tools/: .env  .env.example  __init__.py  tickets.py  users.py
